Fix title tooltip overlap

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -378,7 +378,6 @@ legend {
     margin: 0;
   }
   &--color {
-    position: relative;
     width: 1rem;
     grid-column: span 3;
   }
@@ -515,7 +514,6 @@ label {
   display: grid;
   grid-template-columns: inherit;
   grid-gap: inherit;
-  position: relative;
 }
 
 .icon-button {
